# PathFinder

./: .gitignore  CHANGELOG.md  IMPROVEMENTS_SUMMARY.md  README.md  WORKFLOW_IMPROVEMENTS.md  path_test.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: copilot-instructions.md
.github/workflows/: python-package.yml
notebooks/: path_test.ipynb  readme_examples.ipynb
pathfinder/: __init__.py  dfs.py  matrix_handler.py  multi_core_dfs.py  plot_results.py  result.py
src/pathfinder/: __init__.py  _version.py  dfs.py  matrix_handler.py  plot_results.py  result.py
src/pathfinder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pathfinder/pathfinder/: dfs.py  matrix_handler.py  result.py
tests/: test_dfs.py  test_edge_cases.py  test_equality.py  test_matrix_handler.py  test_plot_results.py  test_result.py
